<resources>
    <string name="app_name">GeoQuiz</string>
    <string name="true_button">True</string>
    <string name="false_button">False</string>
    <string name="correct_toast">Correct!</string>
    <string name="incorrect_toast">Incorrect!</string>
    <string name="prev_button">Previous</string>
    <string name="next_button">Next</string>
    <string name="back_button">Back</string>
    <string name="cheat_button">As you sure you want to do this?</string>
    <string name="cheat_toast">You Cheated!</string>
    <string name="question_01">Is Australia a continent?</string>
    <string name="question_02">The Pacific Ocean is larger than the Atlantic Ocean.</string>
    <string name="question_03">Africa is the largest continent.</string>
    <string name="question_04">The Americas contain more countries than Europe.</string>
    <string name="question_05">Asia is the most populous continent.</string>
</resources>